--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Netflix</title>
+    <link rel="icon" href="assets/Images/d98ae9a3-b60e-42a9-8cc8-705e03fde5b1.svg">
 </head>
 <body>
     <!-- Section 1 -->
